txt-output/3.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: should use square brackets rather than parentheses
v2 = sum (5,6,7)

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\3.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\3.hs:6:9:
    Couldn't match expected type `[a]'
           against inferred type `(t, t1, t2)'
    In the first argument of `sum', namely `(5, 6, 7)'
    In the expression: sum (5, 6, 7)
    In the definition of `v2': v2 = sum (5, 6, 7)


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\3.hs, ill-typed\3.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\3.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\3.hs:6:6: error:
    * No instance for (Foldable ((,,) a0 b0))
        arising from a use of `sum'
    * In the expression: sum (5, 6, 7)
      In an equation for `v2': v2 = sum (5, 6, 7)
  |
6 | v2 = sum (5,6,7)
  |      ^^^

ill-typed\3.hs:6:11: error:
    * Ambiguous type variable `a0' arising from the literal `5'
      prevents the constraint `(Num a0)' from being solved.
      Probable fix: use a type annotation to specify what `a0' should be.
      These potential instances exist:
        instance Num Integer -- Defined in `GHC.Num'
        instance Num Double -- Defined in `GHC.Float'
        instance Num Float -- Defined in `GHC.Float'
        ...plus two others
        ...plus one instance involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    * In the expression: 5
      In the first argument of `sum', namely `(5, 6, 7)'
      In the expression: sum (5, 6, 7)
  |
6 | v2 = sum (5,6,7)
  |           ^

ill-typed\3.hs:6:13: error:
    * Ambiguous type variable `b0' arising from the literal `6'
      prevents the constraint `(Num b0)' from being solved.
      Probable fix: use a type annotation to specify what `b0' should be.
      These potential instances exist:
        instance Num Integer -- Defined in `GHC.Num'
        instance Num Double -- Defined in `GHC.Float'
        instance Num Float -- Defined in `GHC.Float'
        ...plus two others
        ...plus one instance involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    * In the expression: 6
      In the first argument of `sum', namely `(5, 6, 7)'
      In the expression: sum (5, 6, 7)
  |
6 | v2 = sum (5,6,7)
  |             ^
